# SWTesting_Proj3_Selenium_Test

./: .gitignore  README.md  SWTesting_Proj3_Selenium_Test.sln  SWTesting_Proj3_Selenium_Test_C_Sharp.sln
Selenium_Test/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  Selenium_Test.csproj
Selenium_Test/Properties/: AssemblyInfo.cs
Selenium_Test_C#/: AgeCalBoundary.cs  AgeCalDecisionTable.cs  App.config  App.xaml.cs  GradeCalDecisionTable.cs  GradeCalTest.cs  MainWindow.xaml  MainWindow.xaml.cs  PercentageTest.cs  ProbabilityTest.cs  Selenium_Test_C_Sharp.csproj  packages.config
Selenium_Test_C#/Properties/: Resources.Designer.cs  Settings.Designer.cs
Selenium_Test_IDE/: gpa_calculator_test.side
Selenium_Test_IDE/Age_Calculator/: Age Calculator Boundary.side  Age Calculator Decision Table.side
Selenium_Test_IDE/GPA_Calculator/: boundary_value.side  use_case.side
Selenium_Test_IDE/Grade_Calculator/: GRADE_CAL_TEST.side
Selenium_Test_IDE/Percentage_Calculator/: Percentage_Calculator_Testing.side
Selenium_Test_IDE/Probability_Calculator/: Probability_Calculator_Testing.side
Selenium_Test_IDE/Random_Number_Generator/: RandomNumberEquivalue.side  RandomNumberUseCase.side
Selenium_Test_IDE/Salary_Calculator/: Salary_Calculator_Testing.side
Selenium_Test_IDE/Time_Calculator/: Time_Calculator_Testing.side
Selenium_Test_Python/: locator.py  main.py  page.py
Selenium_Test_Python/test_cases/: testcase_Time_Calculator.json
Selenium_Test_Rust/: .env  Cargo.toml
Selenium_Test_Rust/src/: caps.rs  driver_port.rs  gpa_site.rs  lib.rs  main.rs
(+4 files in other folders)
