[package]
name = "Selenium_Test_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
dotenv = "0.15.0"
future-utils = "0.12.1"
futures = "0.3.30"
serde = "1.0.200"
serde_json = "1.0.116"
thirtyfour = "0.32.0"
tokio = { version = "1.37.0", features = ["full"] }
